Modify music iframe for user-selected video
Updated music iframe source and comment for user-selected video.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- PÁGINA FINAL -->
     <div class="love-page" id="lovePage">
 
-        <!-- Música Love Story (Lyrics oficial, menos ads) -->
+        <!-- Música Love Story (con tu video elegido) -->
         <iframe id="musicFrame" width="0" height="0"
             src=""
             frameborder="0"
@@ -128,9 +128,9 @@
 
         yesBtn.addEventListener("click", () => {
 
-            // Activar música con interacción válida
+            // Activar música con interacción válida (tu video)
             musicFrame.src =
-              "https://www.youtube.com/watch?v=akPRZ6gzGXk";
+              "https://www.youtube-nocookie.com/embed/akPRZ6gzGXk?autoplay=1&loop=1&playlist=akPRZ6gzGXk";
 
             // Cambiar pantalla
             document.body.style.background =
