Adjust margin for cake class in index.html
Increased top margin for cake element in CSS.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ h1{
 /* Pastel */
 .cake{
     position:relative;
-    margin:40px auto;
+    margin:80px auto 40px auto; /* más espacio arriba */
     cursor:pointer;
     width:220px;
 }
